# ctrader

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  taxonomy.yaml
_bmad-output/implementation-artifacts/: 1-1-fastapi-scaffolding.md  1-2-migrations-framework.md  1-3-taxonomy-loader.md  1-4-design-tokens-tailwind.md  1-5-base-layout-navigation.md  1-6-mcp-client-wrapper.md  10-1-gordon-weekly-fetch.md  10-2-gordon-diff-hot-picks.md  10-3-strategy-candidate-from-hot-pick.md  11-1-quick-order-form.md  11-1-scheduled-jobs-framework.md  11-2-confirmation-bracket-order.md  11-2-health-widget.md  11-3-daily-postgres-backups.md  11-3-quick-order-status-auto-tagging.md  11-4-quick-order-error-handling.md  12-1-quick-order-form-stock-and-option.md  12-1-scheduled-jobs-framework.md  12-2-confirmation-bracket-order-fixed-stop.md  12-2-health-widget.md  12-3-daily-postgres-backups.md  12-3-order-status-tracking-near-assignment.md  12-4-error-handling-transient-terminal.md  13-1-cashflow-per-period.md  2-1-trades-datenmodell-flex-import.md  2-2-live-ib-sync-reconciliation.md  2-3-journal-startseite-trade-list.md  2-4-trade-drilldown-inline-expansion.md  2-5-ib-flex-nightly-cron-pull.md  3-1-post-hoc-tagging-form.md  3-2-trigger-spec-jsonb.md  3-3-trigger-spec-readable.md  3-4-mistake-tags-top-n-report.md  4-1-facet-filter-system.md  4-2-aggregation-hero-metrics.md  4-3-mae-mfe-calculation.md  4-4-pnl-calendar-view.md  4-5-ohlc-chart-lightweight-charts.md  4-6-command-palette.md  4-7-csv-export-save-query.md  (+34 more)
_bmad-output/planning-artifacts/: architecture.md  epic-13-analytics-dashboard.md  epics.md  implementation-readiness-report-2026-04-12.md  implementation-readiness-report-2026-04-13.md  prd.md  product-brief-ctrader-distillate.md  product-brief-ctrader.md  (+5 more)
app/: __init__.py  config.py  logging.py  main.py
docs/: recovery.md
migrations/: 001_initial_schema.sql  002_trades_table.sql  003_ohlc_candles_and_trade_mae_mfe.sql  004_query_presets.sql  005_fundamental_snapshots.sql  006_mcp_contract_tests.sql  007_strategies_and_notes.sql  008_proposals_and_audit_log.sql  009_audit_log_constraints.sql  010_trades_agent_id.sql  011_proposals_execution_fields.sql  012_regime_snapshots.sql  013_strategies_paused_by.sql  014_gordon_snapshots.sql  015_strategies_source_snapshot.sql  016_job_executions.sql  017_job_executions_cancelled.sql  018_quick_orders.sql  019_trades_option_metadata.sql
tests/: conftest.py
(+188 files in other folders)
