[project]
name = "ctrader"
version = "0.1.0"
description = "Personal trading platform: unified journal (IB) + human-gated AI-agent farm (cTrader)"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [
    { name = "Christian Neise" },
]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "asyncpg>=0.30.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "jinja2>=3.1.4",
    "structlog>=24.4.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0.3",
    "pytailwindcss>=0.3.0",
    "ib-async>=2.1.0",
    "python-multipart>=0.0.26",
    "cachetools>=7.0.5",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
    "testcontainers[postgres]>=4.14.2",
]

# Application mode — kein Build-System, kein editable install.
# ctrader ist eine App, kein distributierbares Package.

# ---------------------------------------------------------------------------
# Ruff (Lint + Format) — Default-Profil, pragmatisch
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py312"
# Ausschluss: BMad-Tooling (eigene Skripte ausserhalb unseres App-Codes),
# BMad-Output-Artefakte, generierte/gecachte Ordner.
extend-exclude = [
    ".claude",
    "_bmad",
    "_bmad-output",
    "data",
    ".venv",
]

[tool.ruff.lint]
# Default-Ruleset ergaenzt um moderne Python-Checks
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "C4",  # flake8-comprehensions
]
ignore = [
    "E501",  # line-too-long — wir lassen ruff format das handhaben
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["N802", "N803"]  # Test-Funktionen duerfen PascalCase haben

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
asyncio_mode = "auto"
markers = [
    "integration: Integration-Tests, brauchen externe Services (DB, Broker) — opt-in",
]
